--- a/ClientApp/src/components/policy.css
+++ b/ClientApp/src/components/policy.css
@@ -16,7 +16,7 @@
 .policy-type1{
     color: rgb(0, 72, 81);
     width:100%;
-    background-color: rgb(233, 232, 232);;
+    background-color: rgb(233, 232, 232);
     padding-left: 1%;
     padding-bottom: 2%;
 }
