--- a/ClientApp/src/components/Noticeboard.css
+++ b/ClientApp/src/components/Noticeboard.css
@@ -12,6 +12,10 @@
     
 }
 
+.content{
+    background-color: white;
+}
+
 .notice-container{
     user-select: none;
     font-size: 0.35em;    
@@ -19,15 +23,15 @@
     flex-direction: row;
     flex:1;
     align-items: center;
-    border: 2px rgb(7, 77, 78) solid;
+    border: 2px rgb(0, 72, 81) solid;
     border-radius: 10px;
     margin-top: 10px;
     margin-left: 100px;
     margin-right: 100px;
     margin-bottom: 10px;
     color: black;
-    box-shadow: 0px 0px 10px 2px rgba(7, 77, 78, 0.6);
-    background-color: rgba(244, 253, 251, 0.9);
+    box-shadow: 0px 0px 10px 2px rgba(0, 72, 81, 0.6);
+    background-color: rgb(231, 231, 231);
     animation: fadein 0.8s;
 }
 
@@ -43,21 +47,22 @@
     flex-direction: column;
     align-items: center;
     color: black;
-    background-color: rgba(68, 183, 73, 0.2);
+    background-color: rgb(68, 183, 73);
     border-radius: 8px;
-    width: 100%;
-    border: 2px rgb(7, 77, 78) solid;
+    width: 60%;
+    border: 2px rgb(0, 72, 81) solid;
     border-left:none;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
 
 .notice-body{
-    color: rgb(102, 100, 100);
+    color: rgb(0, 72, 81);
     font-style: italic;
     padding-left: 80px;
     padding-right: 80px;
     padding-top: 20px;
+    width: 100%;
 }
 
 
