--- a/ClientApp/src/components/Noticeboard.css
+++ b/ClientApp/src/components/Noticeboard.css
@@ -4,12 +4,11 @@
 }
 
 .noticeboard{
-    margin-top: 100px;
     width:100%;
     height:100%;
     margin-top:80px;
     animation: fadein 0.5s;
-    
+    margin-bottom: 8%;
 }
 
 .content{
