--- a/ClientApp/src/components/dashboard.css
+++ b/ClientApp/src/components/dashboard.css
@@ -51,6 +51,7 @@
   font-size:0.4em;
   min-height: 405px;
   animation: fadein 0.5s;
+  background-color: white;
 }
 
 .content-container{
@@ -59,6 +60,7 @@
   display: flex;
   flex-direction: column;
   border-top:none;
+  background-color: white;
   /*background-image:url("https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fw0.fast-meteo.com%2Flocationmaps%2FBeaconsfield.10.gif&f=1&nofb=1");*/
   
   background-size: contain;
