--- a/ClientApp/src/components/signup.css
+++ b/ClientApp/src/components/signup.css
@@ -8,6 +8,7 @@ body {
 }
 
 .super{
+    margin-top: 6%;
     display: flex;
     flex-direction: column;
 }
@@ -60,6 +61,7 @@ input{
 }
 
 .header-container{
+    margin-top:10%;
     display: flex;
     flex-direction: column;
 }
